# neopdf

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CHANGELOG.md  Cargo.toml  README.md  cli-tutorials.html  custom.css  design-and-features.html  design.html  index.html  install-capi.sh  installation.html  mkdocs.yml  neopdf-cli.sh  pixi.toml
.github/actions/cache-data/: action.yml
.github/workflows/: benchmarks.yml  check-msrv.yml  deploy-container.yml  deply-docs.yml  release.yml  run-capi.yml  run-pyapi.yml  run-python.yml  run-rust.yml  run-tests.yml  unit-tests.yml
cli-tutorials/: index.html
custom-interpolation/: index.html
design/: index.html
design-and-features/: index.html
development-with-pixi/: index.html
docs/: cli-tutorials.md  custom-interpolation.md  custom.css  design-and-features.md  design.md  development-with-pixi.md  index.md  installation.md  mkdocs.yml  tmdlib.md
docs/assets/stylesheets/: notebooks.css
docs/docs/: custom.css  design-and-features.md  index.md  installation.md
docs/docs/examples/: c-oop.md  c.md  python.md
docs/docs/installation/: c-cpp.md  python.md  rust.md
docs/examples/: c-oop.md  c.md  fortran.md  mathematica.md  python.md
docs/lhapdf_benchmark/: pdfs.md
examples/: c-oop.html  c.html  fortran.html  neopdf-pyapi.html
examples/c/: index.html
examples/c-oop/: index.html
examples/fortran/: index.html
examples/mathematica/: index.html
examples/neopdf-pyapi/: index.html  neopdf-pyapi.ipynb
examples/python/: index.html
installation/: index.html
lhapdf_benchmark/pdfs/: index.html
maintainer/: download-data.sh  make-release.sh
maintainer/neopdf-container/: Containerfile  script.sh
neopdf/: Cargo.toml  README.md
neopdf/src/: alphas.rs  basisrotation.rs  caching.rs  converter.rs  gridpdf.rs  interpolation.rs  interpolator.rs  lib.rs  manage.rs  metadata.rs  parser.rs  pdf.rs  strategy.rs  subgrid.rs  utils.rs  writer.rs
neopdf/tests/: integration_test.rs  pdf.rs
neopdf_capi/: Cargo.toml  README.md  build.rs  cbindgen.toml
neopdf_capi/docs/: Doxyfile.in  Makefile
neopdf_capi/docs/source/: api.rst  conf.py  examples.rst  index.rst
neopdf_capi/docs/source/_static/: custom.css
neopdf_capi/src/: lib.rs
neopdf_capi/src/include/: NeoPDF.hpp
neopdf_capi/tests/: MAP22_N3LL.kinematics  Makefile  check-capi.c  check-capi.cpp  check-capi.output  check-lhapdf-compatibility.cpp  check-lhapdf-compatibility.output  check-oop.cpp  check-oop.output  check-tmd.cpp  check-writer-oop.cpp  check-writer-oop.output  check-writer.c  check-writer.cpp  check-writer.output  check-xapi.output
neopdf_cli/: Cargo.toml  README.md
neopdf_cli/src/: converter.rs  install.rs  lib.rs  main.rs  pdf.rs  read.rs  tmd_converter.rs
neopdf_cli/tests/: converter.rs  install.rs  main.rs  pdf.rs  read.rs
neopdf_fapi/: Makefile  README.md  check-fapi.f90  check-fapi.output  check-lazy-fapi.f90  check-lazy-fapi.output  check-writer-fapi.f90  neopdf.f90
neopdf_pyapi/: Cargo.toml  README.md  pyproject.toml
neopdf_pyapi/src/: basisrotation.rs  converter.rs  gridpdf.rs  lib.rs  manage.rs  metadata.rs  parser.rs  pdf.rs  writer.rs
neopdf_pyapi/tests/: conftest.py  test_metadata.py  test_pdf.py  test_pdfs.py  test_writer.py
neopdf_tmdlib/: Cargo.toml  README.md  build.rs
neopdf_tmdlib/src/: lib.rs  tmdlib.cpp  tmdlib.hpp
neopdf_tmdlib/tests/: xtmd.rs
neopdf_wolfram/: Cargo.toml  README.md  example.m
neopdf_wolfram/src/: lib.rs
search/: search_index.json
src/: gridpdf.rs  interpolation.rs  lib.rs  main.rs  parser.rs  utils.rs
tests/: integration_test.rs
tmdlib/: index.html
