[package]
name = "lhapdf_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
ninterp = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tempfile = "3.10.1"