[package]
name = "lhapdf_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.15.6"
ninterp = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tempfile = "3.10.1"
rayon = "1.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
