[package]
name = "neopdf"
authors = ["Tanjona R. Rabemananjara <tanjona.hepc@gmail.com>"]
description = "A modern, fast, and reliable PDF interpolation library"
readme = "README.md"

categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ndarray = { version = "0.16.1", features = ["serde"] }
ninterp = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tempfile = "3.10.1"
rayon = "1.5"
thiserror = "1.0.69"
flate2 = "1.1.2"
reqwest = { version = "0.12.22", features = ["blocking", "gzip"] }
tar = "0.4.44"
itertools = "0.14.0"
