[package]
name = "neopdf_capi"
authors = ["Tanjona R. Rabemananjara <tanjona.hepc@gmail.com>"]
description = "C language interface to NeoPDF"
readme = "README.md"
build = "build.rs"

categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
neopdf = { path = "../neopdf", version = "0.1.0" }
ndarray = { version = "0.16.1", features = ["serde"] }
libc = "0.2"

[build-dependencies]
cbindgen = "0.26.0"

[features]
capi = []

[lints]
workspace = true
