[package]
name = "neopdf_capi"
authors = ["Tanjona R. Rabemananjara <tanjona.hepc@gmail.com>"]
description = "C language interface to NeoPDF"
readme = "README.md"
build = "build.rs"

categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
neopdf.workspace = true
ndarray.workspace = true

[build-dependencies]
cbindgen.workspace = true

[features]
capi = []

[lints]
workspace = true
