[package]
name = "neopdf_cli"
authors = ["Tanjona R. Rabemananjara <tanjona.hepc@gmail.com>"]
description = "CLI interface to NeoPDF"
readme = "README.md"

categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
neopdf = { path = "../neopdf", version = "0.1.0" }

[lints]
workspace = true

[[bin]]
name = "neopdf"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
predicates = "3.1.3"
