[package]
name = "neopdf_cli"
authors = ["Tanjona R. Rabemananjara <tanjona.hepc@gmail.com>"]
description = "CLI interface to NeoPDF"
readme = "README.md"

categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
clap.workspace = true
neopdf.workspace = true

[[bin]]
name = "neopdf"
path = "src/main.rs"

[dev-dependencies]
assert_cmd.workspace = true
assert_fs.workspace = true
predicates.workspace = true
tempfile.workspace = true
