[package]
name = "neopdf_cli"
authors = ["Tanjona R. Rabemananjara <tanjona.hepc@gmail.com>"]
description = "CLI interface to NeoPDF"
readme = "README.md"

categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
clap.workspace = true
ndarray.workspace = true
neopdf.workspace = true
terminal_size.workspace = true
neopdf_tmdlib = { path = "../neopdf_tmdlib", optional = true }
toml = { version = "0.8", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
tmdlib = ["dep:neopdf_tmdlib", "dep:toml", "dep:serde"]

[[bin]]
name = "neopdf"
path = "src/main.rs"
doc = false

[dev-dependencies]
assert_cmd.workspace = true
assert_fs.workspace = true
predicates.workspace = true
tempfile.workspace = true
