[package]
name = "neopdf_pyapi"
authors = ["Tanjona R. Rabemananjara <tanjona.hepc@gmail.com>"]
description = "Python bindings to neopdf"

categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.maturin]
name = "neopdf"

[lib]
name = "neopdf"
crate-type = ["cdylib"]

[dependencies]
neopdf = { path = "../neopdf", version = "0.1.0" }
thiserror = "2.0.12"
ndarray = { version = "0.16.1", features = ["serde"] }
numpy = "0.25.0"
pyo3 = { version = "0.25.1", features = ["extension-module"] }
