[package]
name = "neopdf_wolfram"
authors = ["Tanjona R. Rabemananjara <tanjona.hepc@gmail.com>"]
description = "Wolfram Mathematica interface to NeoPDF"
readme = "README.md"

categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
neopdf.workspace = true
lazy_static = "1.4.0"
parking_lot = "0.12.1"
wolfram-library-link = "0.2.10"
